ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ele-ingress
  namespace: prod

spec:
  ingressClassName: nginx
  rules:
    - host: api.kaiandkai.com
      http:
        paths:
          - path: /translate
            pathType: Prefix
            backend:
              service:
                name: translate-service
                port:
                  number: 80
          - path: /wordbook
            pathType: Prefix
            backend:
              service:
                name: wordbook-service
                port:
                  number: 80
